--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,10 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React</title>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/6Oq4vKY5Cl1owefBXm5md9yr/8tN1K9sKQpj4I"
-			crossorigin="anonymous"
-		/>
+		<title>MCQ DB</title>
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="./src/main.jsx"></script>
 	</body>
 </html>
